# tkom_project

./: CMakeLists.txt  EBNF.txt  README.md  documentation.md
include/: ast.h  ast_dump.h  interpreter.h  lexer.h  parser.h  runtime_error.h  source.h  token.h  tools.h
src/: ast.cpp  ast_dump.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  source.cpp
tests/: test.txt  tests.cpp
